<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15" />

        <TextView
            android:id="@+id/Operation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@color/grey_bgr"
            android:gravity="center"
            android:text="@string/operation"
            android:textColor="@color/txt_color" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15" />

        <TextView
            android:id="@+id/Sucess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:gravity="center_horizontal"
            android:text="@string/success"
            android:textColor="@color/green_success"
            android:visibility="gone" />

        <TextView
            android:id="@+id/Fail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:gravity="center_horizontal"
            android:text="@string/fail"
            android:textColor="@color/red_fail"
            android:visibility="gone" />

        <TextView
            android:id="@+id/noValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:gravity="center_horizontal"
            android:text="@string/noValue"
            android:textColor="@color/red_fail"
            android:visibility="gone" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15" />

        <EditText
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@color/grey_bgr"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/type_here"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHint="@color/txt_color" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3" />

            <Button
                android:id="@+id/Validate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:backgroundTint="@color/green_success"
                android:text="@string/validate"
                android:textColor="@color/white"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3" />

            <Button
                android:id="@+id/main_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:backgroundTint="@color/grey_button"
                android:fallbackLineSpacing="false"
                android:filterTouchesWhenObscured="false"
                android:freezesText="false"
                android:text="@string/main"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>